set (CMAKE_CXX_STANDARD 11)
set (PROGRAM_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src)
include_directories (${PROGRAM_SOURCE_DIR})
file (GLOB_RECURSE  ProjectFiles  ${PROGRAM_SOURCE_DIR}/emissionprobabilitycomputer.cpp ${PROGRAM_SOURCE_DIR}/copynumber.cpp ${PROGRAM_SOURCE_DIR}/kmerpath.cpp ${PROGRAM_SOURCE_DIR}/uniquekmers.cpp ${PROGRAM_SOURCE_DIR}/variant.cpp ${PROGRAM_SOURCE_DIR}/variantreader.cpp ${PROGRAM_SOURCE_DIR}/graphbuilder.cpp ${PROGRAM_SOURCE_DIR}/probabilitycomputer.cpp ${PROGRAM_SOURCE_DIR}/transitionprobabilitycomputer.cpp ${PROGRAM_SOURCE_DIR}/hmm.cpp ${PROGRAM_SOURCE_DIR}/columnindexer.cpp ${PROGRAM_SOURCE_DIR}/columnindexer.cpp ${PROGRAM_SOURCE_DIR}/genotypingresult.cpp ${PROGRAM_SOURCE_DIR}/dnasequence.cpp ${PROGRAM_SOURCE_DIR}/fastareader.cpp ${PROGRAM_SOURCE_DIR}/jellyfishcounter.cpp ${PROGRAM_SOURCE_DIR}/jellyfishreader.cpp ${PROGRAM_SOURCE_DIR}/histogram.cpp ${PROGRAM_SOURCE_DIR}/sequenceutils.cpp ${PROGRAM_SOURCE_DIR}/pathsampler.cpp ${PROGRAM_SOURCE_DIR}/probabilitytable.cpp ${PROGRAM_SOURCE_DIR}/kmerparser.cpp ${PROGRAM_SOURCE_DIR}/graph.cpp)
add_executable(tests tests.cpp utils.cpp EmissionProbabilityComputerTest.cpp CopyNumberTest.cpp UniqueKmersTest.cpp KmerPathTest.cpp VariantTest.cpp VariantReaderTest.cpp GraphBuilderTest.cpp ProbabilityComputerTest.cpp TransitionProbabilityComputerTest.cpp HMMTest.cpp ColumnIndexerTest.cpp GenotypingResultTest.cpp DnaSequenceTest.cpp FastaReaderTest.cpp KmerCounterTest.cpp HistogramTest.cpp PathSamplerTest.cpp ProbabilityTableTest.cpp KmerParser.cpp ${ProjectFiles})

target_link_libraries(tests ${JELLYFISH_LDFLAGS_OTHER})
target_link_libraries(tests ${JELLYFISH_LIBRARIES})
